--- a/RebalanceBot.csproj
+++ b/RebalanceBot.csproj
@@ -2,13 +2,14 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="DSharpPlus" Version="4.0.1" />
-      <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.1" />
-      <PackageReference Include="OsuSharp" Version="5.4.4" />
+      <PackageReference Include="DSharpPlus" Version="4.3.0-nightly-01152" />
+      <PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0-nightly-01152" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+      <PackageReference Include="OsuSharp" Version="6.2.2" />
     </ItemGroup>
 
 </Project>
